# media

./: .gitignore  Cargo.toml  README.md
sql/: main.sql
src/: cfg.rs  cli.rs  dir.rs  lib.rs  log.rs  main.rs
src/axum/: extract.rs  mod.rs
src/exe/: mod.rs
src/exe/dump/: cli.rs  mod.rs
src/exe/dump/fmt/: json.rs  mod.rs  sql.rs
src/exe/load/: cli.rs  mod.rs
src/exe/load/fmt/: json.rs  mod.rs  sql.rs
src/exe/serve/: cli.rs  mod.rs
src/exe/serve/web/: auth.rs  error.rs  mod.rs
src/exe/serve/web/route/: all.rs  books.rs  films.rs  games.rs  links.rs  media.rs  mod.rs  query.rs  shows.rs  tags.rs
src/kind/: book.rs  film.rs  game.rs  link.rs  mod.rs  show.rs
